TQ3lib-clean/isoC-Sigli/tqintf.h

#define PHFIXED 2
#define PHENTERED 0
	void c_Change_Status_Phase(char *, int ,double ,void *);
    void c_tqcph1(int, int, int *, double *, double *, double *, double *, double *, void *);
	
	void c_List_Conditions(void *);
	void c_checktdb(char *);
	void c_newEquilibrium(char *,int *);
	void c_selecteq(int ,void *);
    void c_copy_equilibrium(void *,char *,void *);
	void c_set_status_globaldata();
	int c_errors_number();
	void c_new_gtp();
	void c_reset_conditions(char *,void *);
extern"C" int  c_nel;                                                           // number of elements
extern"C" char *c_cnam[MAXEL];                                                     // character array with all element names