TQ3lib-clean/isoC-Sigli/liboctqisoc.F90


!\begin{verbatim}
  subroutine c_tqcph1(n1,n2,n3,gtp,dgdy,d2gdydt,d2gdydp,d2gdy2,c_ceq) bind(c,name='c_tqcph1')
! tq_calculate_phase_properties
!vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
! WARNIG: this is not a subroutine to calculate chemical potentials
! those can only be made by an equilibrium calculation.
! The values returned are partial derivatives of G for the phase at the
! current T, P and phase constitution.  The phase constitution has been
! obtained by a previous equilibrium calculation or 
! set by the subroutine tqsphc
! It corresponds to the "calculate phase" command.
!
! NOTE that values are per formula unit divided by RT, 
! divide also by extra(1) in subroutine tqsphc1 to get them per mole component
!
!^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
! calculate G and some or all derivatives for a phase at current composition
! n1 is the phase tuple index
! n2 is 0 if only G and derivatves wrt T and P, 1 also first drivatives wrt 
!    compositions, 2 if also 2nd derivatives
! n3 is returned as number of constituents (dimension of returned arrays)
! gtp is an array with G, G.T, G:P, G.T.T, G.T.P and G.P.P
! dgdy is an array with G.Yi
! d2gdydt is an array with G.T.Yi
! d2gdydp is an array with G.P.Yi
! d2gdy2 is an array with the upper triangle of the symmetrix matrix G.Yi.Yj 
! reurned in the order:  1,1; 1,2; 1,3; ...           
!                             2,2; 2,3; ...
!                                  3,3; ...
! for indexing one can use the integer function ixsym(i1,i2)
    implicit none
    integer(c_int), intent(in), value :: n1
    integer(c_int), intent(in), value :: n2
    integer(c_int), intent(out) :: n3
    real(c_double), intent(out) :: gtp(6)
    real(c_double), intent(out) :: dgdy(*)
    real(c_double), intent(out) :: d2gdydt(*)
    real(c_double), intent(out) :: d2gdydp(*)
    real(c_double), intent(out) :: d2gdy2(*)
    type(c_ptr), intent(inout) :: c_ceq
!\end{verbatim}
    type(gtp_equilibrium_data), pointer :: ceq
    call c_f_pointer(c_ceq, ceq)
    call tqcph1(n1,n2,n3,gtp,dgdy,d2gdydt,d2gdydp,d2gdy2,ceq)
    c_ceq = c_loc(ceq)
  end subroutine c_tqcph1
  

  
  
  
 !\begin{verbatim}  
  subroutine c_reset_conditions(cline,c_ceq) bind(c, name='c_reset_conditions')
!
    implicit none
	character(c_char), intent(in) :: cline(24) 
	type(c_ptr), intent(inout) :: c_ceq ! in: current equilibrium

!\end{verbatim}
	type(gtp_equilibrium_data), pointer :: ceq
	character(len=24) :: fstring
	fstring = c_to_f_string(cline)
	call c_f_pointer(c_ceq, ceq)
	
	call reset_conditions(fstring,ceq)
	c_ceq = c_loc(ceq)
  end subroutine c_reset_conditions
  
  !\begin{verbatim}
  subroutine c_Change_Status_Phase(phasename,nystat,myval,c_ceq)&
 bind(c, name='c_Change_Status_Phase') 
!change the status Fixed or Entered of a phase 
!PHFIXED=2
!PHENTERED=0
    implicit none
	character(c_char), intent(in) :: phasename(24)
	integer(c_int), intent(in), value :: nystat
	real(c_double), intent(in),value :: myval
    type(c_ptr), intent(inout) :: c_ceq ! in: current equilibrium
!\end{verbatim}	
	type(gtp_equilibrium_data), pointer :: ceq 
	character(len=24) :: fstring
    call c_f_pointer(c_ceq, ceq)
    call c_to_f_str(phasename,fstring)
	call Change_Status_Phase(fstring,nystat,myval,ceq)
	c_ceq = c_loc(ceq)
	
1000 continue	
	return
  end subroutine c_Change_Status_Phase
  
 !\begin{verbatim}  
  subroutine c_List_Conditions(c_ceq)&
 bind(c, name='c_List_Conditions') 
!change the status Fixed or Entered of a phase 
!PHFIXED=2
!PHENTERED=0
    implicit none
	
    type(c_ptr), intent(inout) :: c_ceq ! in: current equilibrium
!\end{verbatim}	
	type(gtp_equilibrium_data), pointer :: ceq 
	 call c_f_pointer(c_ceq, ceq)
	call list_conditions(6,ceq)
	c_ceq = c_loc(ceq)
1000 continue	
	return
  end subroutine c_List_Conditions
  
  !\begin{verbatim} 
 subroutine c_checktdb(tdbfile)&
   bind(c, name='c_checktdb') 
    character(kind=c_char), intent(in) :: tdbfile
!\end{verbatim}
	integer:: nel,i
	character selel(maxel)*2
    character(len=:), allocatable :: fstring
    fstring = c_to_f_string(tdbfile)
	call checktdb(fstring,nel,selel)
	c_nel = nel
    do i = 1, nel
       cnames(i) = trim(selel(i)) // c_null_char
       c_cnam(i) = c_loc(cnames(i))
    end do
	  deallocate(fstring)
	return
  end subroutine c_checktdb
  
  
!\begin{verbatim} 
  subroutine c_newEquilibrium(ceqname,ieq) bind(c, name='c_newEquilibrium') 
  
    character(kind=c_char), intent(in) :: ceqname
	integer(c_int), intent(out):: ieq
!\end{verbatim}
	character(len=:), allocatable :: fstring
	fstring = c_to_f_string(ceqname)
	call enter_equilibrium(fstring,ieq)
	 deallocate(fstring)
  end subroutine c_newEquilibrium
 
 !\begin{verbatim} 
 subroutine c_selecteq(ieq,c_ceq) bind(c, name='c_selecteq') 
 !
 integer(c_int), intent(in),value :: ieq
 type(c_ptr), intent(out) :: c_ceq  
!\end{verbatim}
  type(gtp_equilibrium_data), pointer :: ceq
   !call c_f_pointer(c_ceq, ceq)
    !call selecteq(ieq,ceq)
	ceq=>eqlista(ieq)
    c_ceq = c_loc(ceq)
	nullify(ceq)
	
	return
  end subroutine c_selecteq
  
  !\begin{verbatim} 
  subroutine c_copy_equilibrium(c_neweq,ceqname,c_ceq) bind(c, name='c_copy_equilibrium') 
  
  type(c_ptr), intent(inout) :: c_neweq  
  character(kind=c_char), intent(in) :: ceqname
  type(c_ptr), intent(in) :: c_ceq  
  !\end{verbatim}
  character(len=:), allocatable :: fstring
  type(gtp_equilibrium_data), pointer :: ceq
  type(gtp_equilibrium_data), pointer :: neweq
  call c_f_pointer(c_ceq, ceq)
  fstring = c_to_f_string(ceqname)
  call copy_equilibrium(neweq,fstring,ceq)
  c_neweq=c_loc(neweq)
  deallocate(fstring)
  nullify(ceq)
  return
  end subroutine c_copy_equilibrium
  
!\begin{verbatim}  
  subroutine c_set_status_globaldata() bind(c, name='c_set_status_globaldata') 
  !
  
!\end{verbatim}
    
	!globaldata%status=ibclr(globaldata%status,GSADV)
	!globaldata%status=ibclr(globaldata%status,GSNOPAR)
	!globaldata%status=ibclr(globaldata%status,GSXGRID)
	globaldata%status=ibclr(globaldata%status,GSNOACS)
	
    return
  end subroutine c_set_status_globaldata
!\begin{verbatim} 	
	integer function c_errors_number() bind(c, name='c_errors_number')
!\end{verbatim}	
	c_errors_number=0
	if(gx%bmperr.ne.0) then
		c_errors_number=gx%bmperr
	endif
	return
	end function c_errors_number
  
  
	subroutine c_new_gtp() bind(c, name='c_new_gtp') 
     call new_gtp
   end subroutine c_new_gtp
  
  
	
end module liboctqisoc
